New and Updated code snippets.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="RandomWatch is a movie recommendation app made for my project work."
     />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/logo.png" type="image/png" />
+    <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
     <!-- Prerequisite -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,7 +31,7 @@
     <header class="header">
       <a href="./index.html" class="logo">
         <img
-          src="./assets/images/logo.png"
+          src="./assets/images/logo.svg"
           alt="RandomWatch Home"
           width="140"
           height="32"
