--- a/detail.html
+++ b/detail.html
@@ -11,7 +11,7 @@
       content="RandomWatch is a movie recommendation app made for my project work. #CAP615"
     />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/logo.png" type="image/png" />
+    <link rel="shortcut icon" href="/logo.svg" type="image/png" />
     <!-- Prerequisite -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +30,7 @@
     <header class="header">
       <a href="./index.html" class="logo">
         <img
-          src="./assets/images/logo.png"
+          src="./assets/images/logo.svg"
           alt="RandomWatch Home"
           width="140"
           height="32"
