--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="RandomWatch is a movie recommendation app made for my project work."
     />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
+    <link rel="shortcut icon" href="assets/images/logo.svg" type="image/svg" />
     <!-- Prerequisite -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
