--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </button>
       </div>
 
-      <!--a href="../SignIn&SignUp/index.html" class="btn-login"
-        ><span>Sign In</span></a-->
+      <a href="../SignIn&SignUp/index.html" class="btn-login"
+        ><span>Sign In</span></a>
 
       <button class="search-btn" search-toggler menu-close>
         <img
